feat: remove potential sub
